# avc-corvette

./: .gitignore  BEAGLE_BRINGUP.md  BRINGUP.md  README.md  UBUNTU_BRINGUP.md  single_imu.launch
config/trimble/: trimble_bd950_config.cfg
docker/package_ros_armhf/: Dockerfile  build.sh
docker/ubuntu-14.04-armhf/: Dockerfile
docker/ubuntu-16.04-x86/: Dockerfile  qt-installer-noninteractive.qs
docs/: BB_Pin_Mux.md  BEAGLE_BRINGUP.md  MACOS_BRINGUP.md  UBUNTU_BRINGUP.md
hardware/bd950_interface/: bd950_interface.brd  bd950_interface.sch
hardware/beagle_motor_cape/: motor_control_cape.brd  motor_control_cape.sch
launch/: ntrip_client.launch
ros-install-osx/: install
scripts/: build_debian.sh  control  install_bb_dtc.sh  jenkins_build_script.sh  start_main.py
scripts/device-tree-overlays/: BB-PRU-GPIO-00A0.dts  BB-SPI1-01-00A0.dts
src/ahrs400_driver/: CMakeLists.txt  package.xml
src/ahrs400_driver/include/ahrs400_driver/: ahrs400_driver.h
src/ahrs400_driver/src/: ahrs400_driver.cpp  ahrs400_driver_node.cpp
src/bd950_driver/: CMakeLists.txt  package.xml
src/bd950_driver/include/bd950_driver/: bd950_driver.h
src/bd950_driver/msg/: NavDebug.msg  NavSVInfo.msg  NavSVInfoArray.msg
src/bd950_driver/scripts/: bag-to-kml.py  display_sv_info.py  google-earth-server.py
src/bd950_driver/src/: bd950_driver.cpp  bd950_driver_node.cpp
src/cmake/: FindTICGTPRU.cmake
src/dashboard/: CMakeLists.txt  package.xml
src/dashboard/include/dashboard/: dashboard.h
src/dashboard/src/: dashboard.cpp  dashboard_node.cpp
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/include/motor_control/: gpio.h  motor_control.h  motor_control_node.h
src/motor_control/src/: gpio.c  motor_control.cpp  motor_control_node.cpp  pru_main.c
src/ntrip_client/: CMakeLists.txt  package.xml
src/ntrip_client/msg/: ByteArray.msg
src/ntrip_client/scripts/: write_ntrip_raw.py
src/ntrip_client/src/: ntrip_client_node.cpp
src/ntrip_parser/: CMakeLists.txt  package.xml
src/ntrip_parser/include/ntrip_parser/: GPSDecoder.h  RTCM.h  format.h  m_data.h  m_date.h
src/ntrip_parser/msg/: DecodedNtrip.msg
src/ntrip_parser/src/: RTCM.cpp  m_date.cpp  ntrip_client_parser.cpp
src/osx_joystick/: CMakeLists.txt
src/pru_example/: CMakeLists.txt  package.xml
src/pru_example/src/: .gitignore  PRU_memAccessPRUDataRam.c  bin.cmd  main.c
src/pru_utils/: CMakeLists.txt  README.md  package.xml
src/pru_utils/include/pru_utils/: __prussdrv.h
src/pru_utils/include/pru_utils/pru_icss/: AM335x_hexpru.cmd
src/pru_utils/src/: loader.c  pasm.c  pasmdot.c  pasmexp.c  pasmmacro.c  pasmop.c  pasmpp.c  pasmstruct.c  path_utils.c  prussdrv.c
src/robot_localization/src/: ekf.cpp  ukf.cpp
src/serial/: CMakeLists.txt
src/system_stats/: CMakeLists.txt  package.xml
src/system_stats/include/system_stats/: system_stats.h
src/system_stats/msg/: SysInfo.msg
src/system_stats/src/: system_stats.cpp  system_stats_node.cpp
